@@ -11,6 +11,12 @@ sensord (0.6.35) unstable; urgency=low
   * testBufferingInterval test added for verifying bufferInterval functionality.
   * Refactored SensorManager.
   * SocketHandler now listens for QLocalSocket::error() signals.
+  * Implemented AbstractSensorChannelInterface::hwBuffering() accessor.
+  * For settable properties in AbstractSensorChannelInteface get-accessor now has following effect:
+    - If sensor is started it will query value from sensord.
+    - If sensor is stopped it will return given value set in AbstractSensorChannelInteface or default value if nothing has been set.
+
+    Fixes: NB#218971.
 
  -- shenghua <ext-shenghua.1.liu@nokia>  Thu, 13 Jan 2011 13:29:01 +0200
 
